--- a/bower.json
+++ b/bower.json
@@ -2,22 +2,22 @@
   "name": "sample",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.3.0",
+  	"foundation":"^5.5.0",
+    "angular": "^1.4.0",
     "json3": "^3.3.0",
-    "es5-shim": "^4.0.0",
-    "bootstrap-sass-official": "^3.2.0",
-    "angular-animate": "^1.3.0",
-    "angular-aria": "^1.3.0",
-    "angular-cookies": "^1.3.0",
-    "angular-messages": "^1.3.0",
-    "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0"
+    "es5-shim": "^4.0.0",    
+    "angular-animate": "^1.4.0",
+    "angular-aria": "^1.4.0",
+    "angular-cookies": "^1.4.0",
+    "angular-messages": "^1.4.0",
+    "angular-resource": "^1.4.0",
+    "angular-route": "^1.4.0",
+    "angular-sanitize": "^1.4.0",
+    "angular-touch": "^1.4.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.0",
-    "angular-scenario": "~1.3.0"
+    "angular-mocks": "~1.4.0",
+    "angular-scenario": "~1.4.0"
   },
   "appPath": "app"
 }
